--- a/src/index.css
+++ b/src/index.css
@@ -22,13 +22,15 @@ a {
 button {
   font: inherit;
   border: initial;
-  outline: initial; /* create alternative for focus state */
+  outline: initial;
+  /* create alternative for focus state */
   background-color: initial;
 }
 
 input {
   border: initial;
-  outline: initial; /* create alternative for focus state */
+  outline: initial;
+  /* create alternative for focus state */
   font: inherit;
 }
 
@@ -68,7 +70,8 @@ body {
   font-family: "Inter", sans-serif;
   position: relative;
 
-  scrollbar-width: none; /* Firefox */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 body::-webkit-scrollbar {
@@ -119,11 +122,9 @@ body::-webkit-scrollbar {
 
 .background::before {
   content: "";
-  background-image: linear-gradient(
-    -180deg,
-    rgba(0, 0, 0, 0.025) 0,
-    rgba(0, 0, 0, 0.075) 99%
-  );
+  background-image: linear-gradient(-180deg,
+      rgba(0, 0, 0, 0.025) 0,
+      rgba(0, 0, 0, 0.075) 99%);
   position: absolute;
   left: 0;
   right: 0;
@@ -131,7 +132,7 @@ body::-webkit-scrollbar {
   top: 0;
 }
 
-.background > img {
+.background>img {
   position: absolute;
   top: -25px;
   left: 0;
@@ -246,13 +247,16 @@ body::-webkit-scrollbar {
 .job-list {
   background-color: #fff;
   position: relative;
+  min-height: 140px;
   /* height: 100%; */
   flex: 1;
   display: flex;
   flex-direction: column;
 
-  scrollbar-color: #cacdd0 #ffffff; /* Firefox */
-  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: #cacdd0 #ffffff;
+  /* Firefox */
+  scrollbar-width: thin;
+  /* Firefox */
 }
 
 .job-list::-webkit-scrollbar {
@@ -321,7 +325,7 @@ body::-webkit-scrollbar {
   top: 82px;
 }
 
-.job-list--bookmarks > p {
+.job-list--bookmarks>p {
   font-size: 14px;
   position: absolute;
   top: 46%;
@@ -397,8 +401,7 @@ body::-webkit-scrollbar {
   background-color: #d96a46;
 } */
 
-.job-item__middle {
-}
+.job-item__middle {}
 
 .job-item__company {
   font-size: 13px;
@@ -484,14 +487,14 @@ body::-webkit-scrollbar {
   margin-top: 20px;
 }
 
-.search > button {
+.search>button {
   cursor: pointer;
   position: absolute;
   top: 17px;
   left: 25px;
 }
 
-.search > button > i {
+.search>button>i {
   transition: all 0.2s;
   color: rgba(0, 0, 0, 0.73);
 }
@@ -590,7 +593,7 @@ body::-webkit-scrollbar {
   gap: 4px;
 }
 
-.sorting > i {
+.sorting>i {
   font-size: 11px;
   color: #4c4f50;
   margin-right: 5px;
@@ -669,9 +672,10 @@ body::-webkit-scrollbar {
   margin-left: 3px;
 }
 
-.pagination__button > span {
+.pagination__button>span {
   font-weight: 500;
 }
+
 .pagination__icon {
   font-size: 8px;
   color: #9fa6b0;
@@ -693,7 +697,7 @@ body::-webkit-scrollbar {
   transform: translate(-50%, -50%);
 }
 
-.job-details__start-view > p:first-child {
+.job-details__start-view>p:first-child {
   opacity: 0.55;
   width: 275px;
   text-align: center;
@@ -703,7 +707,7 @@ body::-webkit-scrollbar {
   margin-bottom: 10px;
 }
 
-.job-details__start-view > p:nth-child(2) {
+.job-details__start-view>p:nth-child(2) {
   opacity: 0.55;
   color: #24292d;
   font-size: 14px;
@@ -711,11 +715,11 @@ body::-webkit-scrollbar {
   text-align: center;
 }
 
-.job-details > div {
+.job-details>div {
   height: 100%;
 }
 
-.job-details > div > img {
+.job-details>div>img {
   width: 100%;
   height: 174px;
   position: absolute;
@@ -726,8 +730,7 @@ body::-webkit-scrollbar {
   user-select: none;
 }
 
-.job-details__other {
-}
+.job-details__other {}
 
 .job-details__footer {
   margin-left: 42px;
@@ -790,11 +793,9 @@ body::-webkit-scrollbar {
   height: 174px;
   top: 0;
   left: 0;
-  background-image: linear-gradient(
-    to top,
-    rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0.15)
-  );
+  background-image: linear-gradient(to top,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.15));
   z-index: -1;
   border-top-right-radius: 8px;
 }
@@ -977,24 +978,24 @@ body::-webkit-scrollbar {
 }
 
 /* COPYRIGHT */
-.footer > small {
+.footer>small {
   font-size: 11px;
   max-width: 200px;
 }
 
-.footer > small *::selection {
+.footer>small *::selection {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.footer > small > p:first-child {
+.footer>small>p:first-child {
   line-height: 1.2;
 }
 
-.footer > small > p:first-child > a {
+.footer>small>p:first-child>a {
   text-decoration: underline;
 }
 
-.footer > small > p:first-child > svg {
+.footer>small>p:first-child>svg {
   font-size: 10px;
   margin-right: 4px;
   margin-left: 2px;
@@ -1002,7 +1003,7 @@ body::-webkit-scrollbar {
 }
 
 /* JOBS AVAILABLE */
-.footer > p {
+.footer>p {
   font-size: 11px;
   align-self: flex-start;
 }
@@ -1022,8 +1023,7 @@ body::-webkit-scrollbar {
   border-left: 5px solid #ccd1d3;
 }
 
-.spinner--search {
-}
+.spinner--search {}
 
 .spinner--job-details {
   left: 50%;
@@ -1152,11 +1152,11 @@ body::-webkit-scrollbar {
     justify-content: center;
   }
 
-  .footer > small {
+  .footer>small {
     text-align: center;
   }
 
-  .footer > p {
+  .footer>p {
     margin-left: 15px;
     text-align: right;
     display: none;
